2014-03-21 Fix: sizeof(void) was not an error.
2014-03-21 Made scc keep non-temporary object files.
2014-03-21 Added ufseek() (unsigned fseek) function to S86.
2014-03-20 Updated documentation.
2014-03-19 Both S86 and SLD run on 16-bit systems now.
2014-03-19 Made SLD store its relocation buffer on disk.
2014-03-19 Updated build script for windows. (untested!)
2014-03-18 Changed malloc() over-alloc. threshold for 16-bit systems.
2014-03-18 Made SLD store its relocation table on disk.
2014-03-17 Cleaned up the S86 tool chain, moved to s86/.
2014-03-17 Added setjmp() and longjmp() to DOS crt0.
2014-03-17 Made s86 write RELOC table to file to save memory.
2014-03-16 Added volatile keyword (as no-op).
2014-03-14 Misc. small fixes to libc (purely stylistic).
2014-03-14 Made printf("%s",NULL); print (NULL) instead of crash.
2014-03-14 Added missing CG prototypes.
2014-03-13 Added arena check to realloc().
2014-03-13 Added ad-hoc libc test suite. (tests/libtest.c)
2014-03-13 Implemented proper (unsigned) pointer comparison. (all back-ends)
2014-03-13 Fix: missing cmp queue commit in queue_cmp() (all back-ends).
2014-03-11 Fix: _vformat() crashed on unknown % sequences.
2014-03-11 Fix: limited octal escape sequences to three digits.
2014-03-11 Fix: added code to handle void values in expressions.
2014-03-11 Improved long usage (-d ?), misc cosmetical fixes.
2014-03-09 Updated misc. docs.
2014-03-06 Added code to fuse logic ops and conditional jumps (optimization).
2014-02-26 Fixed code generator bug in armv6 back end.
2014-02-26 Fixed alignment in galloc() for cross-compilation.
2014-02-25 Added vprintf(), vfprintf(), and vsprintf() functions.
2014-02-25 Added (slightly incompatible) varargs mechanism.
2014-02-23 Fixed duplicate register use in 8086 CG.
2014-02-21 Made s86 keep its code output on disk instead of in memory.
2014-02-20 Moved switch tables to code segment.
2014-02-19 Documented SLD (small loader) file formats.
2014-02-18 Fixed DOSRELOC bug in SLD.