@@ -104,12 +104,12 @@
 	and Clang. Of course, this is also due to the simple LIBC
 	implementation used by SubC.
 
-	On the other hand, the generated code runs about twice as
-	long as the code generated by Clang or GCC, even at optimization
-	level 0.
+	On the other hand, the generated code is only little more than
+	half as fast as the code generated by Clang or GCC, even at
+	optimization level 0.
 
 	See the below tables for some sample results.
-	
+
 	Run times were obtained by running
 
 		time cc -S *.c
