@@ -1,5 +1,5 @@
 
-	SubC Compiler, Version 2014-03-21
+	SubC Compiler, Version 2014-03-23
 	By Nils M Holm, 2011--2014
 	Placed in the public domain
 
@@ -76,7 +76,8 @@
 	   &array[0]).
 
 	o  the auto, register, and volatile keywords are recognized
-	   (as no-ops).
+	   (as no-ops). Yes, volatile is safe, because SubC does not
+	   have register variables.
 
 	o  enums may now be local.
 
