@@ -3,7 +3,8 @@
  *	Windows/386 (MinGW) environment
  */
 
-#define OS	"Window-MinGW"
-#define ASCMD	"as -g -o %s %s"
-#define LDCMD	"ld  --subsystem console -e _mainCRTStartup -o %s %s/lib/crt0.o"
-#define SYSLIBC	"c:/mingw/lib/libuser32.a c:/mingw/lib/libkernel32.a c:/mingw/lib/libgdi32.a"
+#define OS		"Window-MinGW"
+#define AOUTNAME	"aout.exe"
+#define ASCMD		"as -g -o %s %s"
+#define LDCMD		"ld  --subsystem console -e _mainCRTStartup -o %s %s/lib/crt0.o"
+#define SYSLIBC		"c:/mingw/lib/libuser32.a c:/mingw/lib/libkernel32.a c:/mingw/lib/libgdi32.a"
